write some img to the img dir when I request the platform by endpoint.
