# server/api/controllers/platforms/router.js
@@ -1,0 +1,8 @@
+import * as express from 'express'
+import controller from './controller'
+
+export default express
+  .Router()
+  .get('/', controller.all)
+  .get('/:id', controller.byId)
+
